--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>CiphersSon</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title>Frank Forrester</title>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.3.2.min.js"></script>
+		<script type="text/javascript" src="canvastree.js"></script>
+		<style>
+			body {
+				text-align: center;
+/* 				background-color: #abcdef; */
+			}
+			canvas#canvastree {
+				position: relative;
+				margin-left: auto;
+				margin-right: auto;
+				width: 750px;
+				height: 500px;
+				border-bottom: 2px solid black;
+			}
+			a {
+				color: black;
+			}
+		</style>
+	</head>
+	<body>
+		<canvas id="canvastree"></canvas>
+		<small><b><big><a title="I'm a social butterfly!" href="http://frankforrester.com/SocialNetworks.html" target="_blank">Social Networks</a>   <a title="My blog were I mostly just rant." href="http://n00bfu.com/" target="_blank">Blog</a>   <a title="Wicked cool site for my projects comming soon!" href="http://frankforrester.com/under-construction.gif" target="_blank">Projects</a>   <a title="owncloud server" href="http://browncountykansas.com/" target="_blank">OwnCloud</a>   </big></b></small><strong><a title="Web based IRC client." href="http://irc.frankforrester.com" target="_blank">IRC</a> </strong> <small><b><big><a title="Date Thingy" href="http://frankforrester.com/Ciphersson_Date_Thingy.htm" target="_blank">Date Thingy</a>
+
+_______________________________________
+
+<strong> </strong><a title="It's Lorem ipsum but with CYBER!" href="http://frankforrester.com/CyberIpsum.html" target="_blank"><strong>Cyber Ipsum</strong></a><strong>    </strong><strong><a title="ASCII password generator" href="http://frankforrester.com/passwdJinn.html" target="_blank">Passwd Jinn</a>   <a title="Javascript ASCII password generator" href="http://frankforrester.com/passwdJinn-ASCII"   <a title="Javascript ASCII password generator" href="http://frankforrester.com/passwdJinn-ASCII" target="_blank">ACSII Passwd Jinn</a></strong> 
+
+<a title="Cyber2048" href="http://frankforrester.com/Cyber2048.html" target="_blank"><strong>Cyber2048</strong></a>
+
+_____________________   <a title="Ya like my awesome mug?" href="http://frankforrester.com/mug.html" target="_blank"><strong><em>MUG</em></strong></a>   ___________________
+<!-- 		<div id="info-container">
+			<div id="info"></div>
+			<div id="fps"></div>
+		</div> -->
 </html>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51450220-1', 'frankforrester.com');
+  ga('send', 'pageview');
+
+</script>
