--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Frank Forrester</title>
         <body bgcolor="#999999">
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.3.2.min.js"></script>
-		<script type="text/javascript" src="canvastree.js"></script>
+		<script type="text/javascript" src="https://ciphersson.github.io/canvastree.js"></script>
 		<style>
 			body {
 				text-align: center;
