--- a/index.html
+++ b/index.html
@@ -87,9 +87,17 @@
 			
 			<nav id="nav">
 				<div class="innertube">
-					<h3>2016</h3>
+					<h3>Old</h3>
 					<ul>
 						<li><a href="https://ciphersson.github.io/passwdJinn.html">PasswdJinn</a></li>
+						<li><a href="#">Link 2</a></li>
+						<li><a href="#">Link 3</a></li>
+						<li><a href="#">Link 4</a></li>
+						<li><a href="#">Link 5</a></li>
+					</ul>
+					<h3>2016</h3>
+					<ul>
+						<li><a href="#">Link 1</a></li>
 						<li><a href="#">Link 2</a></li>
 						<li><a href="#">Link 3</a></li>
 						<li><a href="#">Link 4</a></li>
