--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<h3>Old</h3>
 					<ul>
 						<li><a href="https://ciphersson.github.io/passwdJinn.html">PasswdJinn</a></li>
-						<li><a href="#">Link 2</a></li>
+						<li><a href="https://ciphersson.github.io/passwdJinn-ASCII.html">passwdJinn-ASCII</a></li>
 						<li><a href="#">Link 3</a></li>
 						<li><a href="#">Link 4</a></li>
 						<li><a href="#">Link 5</a></li>
