--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 						<li><a href="https://ciphersson.github.io/passwdJinn.html">PasswdJinn</a></li>
 						<li><a href="https://ciphersson.github.io/passwdJinn-ASCII.html">passwdJinn-ASCII</a></li>
 						<li><a href="https://ciphersson.github.io/NSA.html">NSA</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
+						<li><a href="https://twitter.com/CiphersSon">Twitter</a></li>
+						<li><a href="https://keybase.io/ciphersson">Keybase</a></li>
 					</ul>
 					<h3>2016</h3>
 					<ul>
