--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</ul>
 					<h3>2016</h3>
 					<ul>
-						<li><a href="#">https://ciphersson.github.io/Cliff%20Em%20All_A%20Tale%20of%20the%20War%20of%20the%20Binary%20Brothers.html>Cliff Em All</a></li>
+						<li><a href="https://ciphersson.github.io/Cliff%20Em%20All_A%20Tale%20of%20the%20War%20of%20the%20Binary%20Brothers.html">Cliff Em All</a></li>
 						<li><a href="#">Link 2</a></li>
 						<li><a href="#">Link 3</a></li>
 						<li><a href="#">Link 4</a></li>
